# RLnoisy

./: LICENSE  pyproject.toml  requirements.txt
examples/: benchmark.ipynb  benchmark2.ipynb  demo.ipynb  intro.ipynb  learning.ipynb
examples/models/: clifford_3q_custom.json  clifford_3q_custom.pt  lf_5_line.json  lf_5_line.pt  perm_square_3x3.json  perm_square_3x3.pt
examples/runs/benchmark_noiseless/: checkpoint_best.safetensors  checkpoint_last.safetensors  events.out.tfevents.1770189721.Yashars-MacBook-Air.local.52352.0  events.out.tfevents.1770191079.Yashars-MacBook-Air.local.52352.32  events.out.tfevents.1770191088.Yashars-MacBook-Air.local.52352.48  events.out.tfevents.1770662979.Yashars-MacBook-Air.local.66116.0  events.out.tfevents.1770666713.Yashars-MacBook-Air.local.66116.32  events.out.tfevents.1770668448.Yashars-MacBook-Air.local.66116.64
examples/runs/benchmark_noisy/: checkpoint_best.safetensors  checkpoint_last.safetensors  events.out.tfevents.1770189729.Yashars-MacBook-Air.local.52352.16  events.out.tfevents.1770191095.Yashars-MacBook-Air.local.52352.64  events.out.tfevents.1770663038.Yashars-MacBook-Air.local.66116.16  events.out.tfevents.1770666769.Yashars-MacBook-Air.local.66116.48  events.out.tfevents.1770668507.Yashars-MacBook-Air.local.66116.80
examples/runs/benchmark_noisy_az/: checkpoint_best.safetensors  checkpoint_last.safetensors  (+4 more)
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/envs/: clifford.rs  common.rs  linear_function.rs  linear_function_noisy.rs  mod.rs  permutation.rs
src/qiskit_gym/: __init__.py
(+643 files in other folders)
